--- a/Locale/zh-TW.xaml
+++ b/Locale/zh-TW.xaml
@@ -158,10 +158,13 @@
     <sys:String x:Key="LabelCloseOption">
         關閉
     </sys:String>
-    <sys:String x:Key="CloseOptionHide">
+    <sys:String x:Key="ConfigCloseOptionHide">
         隱藏
     </sys:String>
-    <sys:String x:Key="CloseOptionQuit">
+    <sys:String x:Key="ConfigCloseOptionMinimize">
+        最小化
+    </sys:String>
+    <sys:String x:Key="ConfigCloseOptionExit">
         退出
     </sys:String>
     <sys:String x:Key="LabelSystem">
@@ -170,7 +173,7 @@
     <sys:String x:Key="SystemSupport">
         默認支持
     </sys:String>
-    <sys:String x:Key="SystemRequireMenuItems">
+    <sys:String x:Key="SystemRequireMenuNames">
         需設置菜單项
     </sys:String>
     <sys:String x:Key="LabelVersion">
@@ -195,6 +198,9 @@
     </sys:String>
     <sys:String x:Key="TriggerPeriod">
         定期
+    </sys:String>
+    <sys:String x:Key="TriggerTimer">
+        定時
     </sys:String>
     <sys:String x:Key="TriggerMonitor">
         監控
@@ -226,7 +232,7 @@
     <sys:String x:Key="IntervalAnHour">
         1小時
     </sys:String>
-    <sys:String x:Key="LabelCleanMenuItems">
+    <sys:String x:Key="LabelCleanMenuNames">
         菜單項
     </sys:String>
 
