--- a/Locale/en-US.xaml
+++ b/Locale/en-US.xaml
@@ -12,6 +12,9 @@
     <sys:String x:Key="Enabled">
         Enabled
     </sys:String>
+    <sys:String x:Key="Cleanlist">
+        Cleanlist
+    </sys:String>
     <sys:String x:Key="Blacklist">
         Blacklist
     </sys:String>
