feat: add repeat keyword hint

--- a/Locale/fr-FR.xaml
+++ b/Locale/fr-FR.xaml
@@ -286,5 +286,8 @@
     <sys:String x:Key="TitleKeywords">
         mots clés
     </sys:String>
+    <sys:String x:Key="HintRepeatKeywords">
+        Des mots clés connexes existent déjà
+    </sys:String>
 
 </ResourceDictionary>
