--- a/Locale/en-US.xaml
+++ b/Locale/en-US.xaml
@@ -286,5 +286,8 @@
     <sys:String x:Key="TitleKeywords">
         Keywords
     </sys:String>
+    <sys:String x:Key="HintRepeatKeywords">
+        Related keywords already exist
+    </sys:String>
 
 </ResourceDictionary>
