--- a/Locale/ru-RU.xaml
+++ b/Locale/ru-RU.xaml
@@ -287,5 +287,8 @@
     <sys:String x:Key="TitleKeywords">
         ключевые слова
     </sys:String>
+    <sys:String x:Key="HintRepeatKeywords">
+        Связанные ключевые слова уже существуют
+    </sys:String>
 
 </ResourceDictionary>
